Trying to fix visual issue with drop shadow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ a:hover {
   margin-right: auto;
   margin-left: auto;
   margin-top: 20px;
+  margin-bottom:10px;
   background-color: rgb(53, 53, 53);
   filter: drop-shadow(0px 5px 10px #000000);
   border-radius: 25px;
@@ -134,7 +135,6 @@ a:hover {
 
 .donate {
   text-align: center;
-  margin-top: 15px;
 }
 
 .donate p {
